fix: Final bug fixes and local test passed

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-API_KEY=AIzaSyAYJF44vRXG5mkL4EvIFf-3naNRL0Q8Pzw
+API_KEY="AIzaSyAYJF44vRXG5mkL4EvIFf-3naNRL0Q8Pzw"
+SEARCH_ENGINE_ID="512a4dbecd2ec4dbc"
